<resources>
    <string name="app_name">Android P2P Sync</string>
    <string name="send_data">Send Data</string>
    <string name="receive_data">Receive Data</string>
    <string name="waiting_for_devices_to_connect">Waiting for device(sender) to receive data from&#8230;</string>
    <string name="location_service_disabled">Location service disabled</string>
    <string name="file_data_sharing_will_not_work_without_location"><![CDATA[The file and data sharing feature will not work without location. To change this, go to Settings > Location]]></string>
    <string name="searching_for_device_to_connect_to">Searching for a device(recipient) to send data to&#8230;</string>
    <string name="qr_code_scanning_dialog_message">Scan the QR Code on the receiving device, \"%s\'s device\", to confirm the correct device</string>
    <string name="you_are_connected_to_receiver">You are now connected to the receiver %s</string>
    <string name="you_are_connected_to_sender">You are now connected to the sender %s</string>
    <string name="receiver_rejected_the_connection">The receiver rejected the connection</string>
    <string name="an_error_occurred_before_acceptance_or_rejection">An error occurred before the connection could be accepted or rejected</string>
    <string name="accept_connection_dialog_title">Do you want to accept connection to %s?</string>
    <string name="accept_connection_dialog_content">Confirm the code [%s] matches on both devices before you accept the connection</string>
    <string name="advertising_started">Advertising has been started successfully</string>
    <string name="advertising_could_not_be_started">Advertising could not be started - FAILED</string>
    <string name="authentication_failed_connection_rejected">Authentication failed! The connection has been rejected</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="an_error_occurred_start_receiving">An error occurred and we cannot start receiving</string>
    <string name="error_occurred_cannot_start_sending">An error occurred and we cannot start sending</string>
    <string name="connection_could_not_be_authorized">Connection to %s could not be authorized</string>
    <string name="log_discovery_could_not_be_started">Discovery could not be started - FAILED</string>
    <string name="log_discovery_started_successfully">Discovery has been started successfully</string>
    <string name="log_connection_rejected_successfully">Connection %s rejected successfully</string>
    <string name="log_connection_rejection_failed">Could not reject connection : %s</string>
    <string name="log_connection_result">Connection result : %s</string>
    <string name="log_disconnected">Disconnected: %s</string>
    <string name="log_connection_initiated">Connection initiated %s</string>
    <string name="log_authentication_cancelled">Authentication cancelled : %s</string>
    <string name="log_endpoint_lost">Endpoint lost %s</string>
    <string name="connection_to_endpoint_broken">The connection to %s has broken</string>
    <string name="connected">CONNECTED</string>
    <string name="log_connection_initiated_endpoint_auth_code">Connection initiated by : %1$s  Endpoint name(%2$s) auth code(%3$s)</string>
    <string name="log_rejecting_connection_initiated_by_other_device">Rejecting connection initiated by the other device %1$s, %2$s, %3$s</string>
    <string name="log_endpoint_found">Endpoint found : %1$s   Endpoint info: (%2$s, %3$s)</string>
    <string name="log_received_payload_from_endpoint">Received a payload from %s</string>
    <string name="connection_request_successful">CONNECTION REQUEST WAS SUCCESSFUL</string>
    <string name="could_not_initiate_connection_request_to_device">COULD NOT INITIATE CONNECTION REQUEST TO THE DEVICE</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="authentication_successful_receiver_can_accept_connection">Authentication successful! Receiver can accept connection</string>
    <string name="chat_message_format">%1$s: %2$s</string>
    <string name="log_detector_dependencies_are_not_yet_available">Detector dependencies are not yet available.</string>
    <string name="barcode_detector_dependencies_cannot_be_downloaded">Barcode detector dependencies cannot be downloaded due to low device storage</string>
    <string name="log_unable_to_start_camera_source">Unable to start camera source.</string>
    <string name="log_could_not_show_google_play_services_resolution_dialog">Could not show Google Play Services resolution dialog since it was not called from an activity</string>
    <string name="could_not_start_camera_source">Could not start camera source.</string>
    <string name="no_permission_to_start_the_camera">Do not have permission to start the camera</string>
    <string name="scan_this_qr_code_using_sending_device">Scan this QR Code using the sending device, \"%s\'s device\", to confirm the correct device</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_cancelled_with_reason">Authentication cancelled : %s</string>
    <string name="an_error_occured">An error occurred!</string>
    <string name="error_occurred_trying_to_get_mac_address">An error occurred trying to get your WiFi Mac address</string>
    <string name="log_getting_mac_address_not_successful">Getting device mac address was not successful! It failed</string>
    <string name="log_records_deleted">%d records deleted</string>
    <string name="log_error_occurred_trying_to_delete_p2p_received_history_on_device">An error occurred trying to delete the P2P received history of the device %s</string>
    <string name="an_error_occurred_trying_to_save_new_sender_details">An error occurred trying to save the new sender details</string>
    <string name="log_hash_key_was_sent_in_an_invalid_format">Hash key was sent in an invalid format</string>
    <string name="reason_authorization_rejected_by_sender_details_invalid">Authorization details sent by receiver are invalid</string>
    <string name="reason_authorization_rejected_by_receiver_details_invalid">Authorization details sent by receiver are invalid</string>
    <string name="log_hash_key_sent_was_null">Hash key was sent was null</string>
    <string name="log_jsonparse_exception_trying_to_process_received_history">A JSONParseException occurred trying to process received history</string>
    <string name="log_error_occurred_processing_non_media_data">An error occurred trying to process non-media data</string>
    <string name="log_error_occurred_processing_media_data">An error occurred trying to process non-media data</string>
    <string name="log_received_invalid_manifest_from_endpoint">Received invalid manifest from endpoint %s</string>
    <string name="log_ignoring_payload_since_it_does_not_match_expected_payload">Ignoring payload %1$d since it does not match the expected payload %2$d</string>
    <string name="log_receive_invalid_manifest_from_endpoint">Received invalid manifest from endpoint %s</string>
    <string name="log_received_payload_without_corresponding_manifest">Received a payload without a corresponding manifest</string>
    <string name="peer_to_peer_activity_title">Share data with nearby device</string>
    <string name="skip_this_step">Skip This Step</string>
    <string name="starting">Starting...</string>
    <string name="receiving_data">Receiving data</string>
    <string name="sending_data">Sending data</string>
    <string name="transfer_successful">Transfer successful</string>
    <string name="close">Close</string>
    <string name="log_onconnectionrejected_without_peer_device">onConnectionRejected was called for endpoint %s and no peer device is connected</string>
    <string name="log_onconnectionunknownerror_without_peer_device">onConnectionUnknownError for endpoint %s was called and no peer device is connected</string>
    <string name="log_onconnectionbroken_without_peer_device">onConnectionBroken was called for endpoint %s and no peer device is connected</string>
    <string name="log_ondisconnected_without_peer_device">onDisconnected was called for endpoint %s and no peer device is connected</string>
    <string name="could_not_disconnection_reset_without_endpoint">Could not stop sending data because no endpoint exists</string>
    <string name="log_onconnectionaccepted_without_peer_device">onConnectionAccepted to endpoint %s without a peer device</string>
    <string name="onconnectionunknownerror_without_peer_device">onConnectionUnknownError to endpoint %s without a peer device</string>
    <string name="log_onauthenticationsuccessful_without_peer_device">onAuthenticationSuccessful without a peer device</string>
    <string name="transfer_summary_content">%1$,d records %2$s</string>
    <string name="unknown">Unknown</string>
    <string name="transfer_records_track_log_format">%1$s|%2$s|%3$s|%4$d|%5$s</string>
    <string name="transfer_records_track_log_hr_format">Device %1$s %2$s %3$,d of %4$s. More device info(%5$s)</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="receiving_progress_text">Transferring %,d records</string>
    <string name="sending_progress_text">Transferring %,d records</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="skip">SKIP</string>
    <string name="connection_lost_transfer_summary">Please make sure \"%1$s\'s device\" is turned on and in range. %2$s records were transferred. Reconnect to transfer the remaining data.</string>
    <string name="skip_qr_scan">Skip QR Scan?</string>
    <string name="skip_qr_scan_instructions_sender">The receiving device, \"%s\'s device\", chose to skip the QR scan step. Choosing skip will let you send data to the other device without a QR scan confirmation.</string>
    <string name="skip_qr_scan_instructions_receiver">The sending device, \"%s\'s device\", chose to skip the QR scan step. Choosing skip will let the data be transferred to your device without a QR scan confirmation.</string>
    <string name="connecting">Connecting</string>
    <string name="please_wait">Please wait...</string>
    <string name="authorization_failed">Authorization Failed</string>
    <string name="device_information_passed_is_invalid">Device information passed is invalid</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="authentication_tokens_dont_match">Authentication tokens do not match. You are connecting to the wrong device</string>
    <string name="please_make_sure_device_is_turned_on_and_in_range">Please make sure \"%s\'s device\" is turned on and in range</string>
    <string name="log_discovering_timed_out_while_not_in_discovering_mode">Discovering timed out and interactor was not in discovering mode</string>
    <string name="log_advertising_timed_while_not_in_advertising_mode">Advertising timed out and interactor was not in advertising mode</string>
    <string name="no_nearby_devices_found">No Nearby Devices Found</string>
    <string name="make_sure_peer_device_turned_on_in_range">Please make sure the device you want to send data to is turned on and in range</string>
    <string name="start_transfer">Start Transfer</string>
    <string name="devices_connected">Devices Connected</string>
    <string name="please_make_sure_the_devices_remain_within_range_during_data_transfer">Please make sure the devices remain within range during data transfer</string>
    <string name="processing_disclaimer" >Disclaimer</string>
    <string name="error_play_services_title">Google Play Services Required</string>
    <string name="error_play_services">Google play services in required for this service to work</string>
    <string name="device_pairing_code">Device pairing code</string>
    <string name="you_are_attempting_to_send_data_to_device">You are attempting to send data to %s device</string>
</resources>