<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/imageViewGuideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <ImageView
        android:id="@+id/iv_devicesConnectedFragment_connectedIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewGuideline"
        android:src="@drawable/ic_icon_connected"/>

    <TextView
        android:id="@+id/tv_devicesConnectedFragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_devicesConnectedFragment_connectedIcon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/black"
        android:textSize="@dimen/start_transfer_title_size"
        android:layout_marginTop="@dimen/start_transfer_title_margin"
        android:text="@string/devices_connected"/>

    <TextView
        android:id="@+id/tv_devicesConnectedFragment_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_devicesConnectedFragment_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        android:textSize="@dimen/start_transfer_message_size"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:text="@string/please_make_sure_the_devices_remain_within_range_during_data_transfer"/>

    <Button
        android:id="@+id/btn_devicesConnectedFragment_okBtn"
        android:text="@string/start_transfer"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:textSize="19sp"
        style="@style/P2pModeSelect.Buttons.Cornered"
        app:layout_constraintRight_toRightOf="@id/tv_devicesConnectedFragment_message"
        app:layout_constraintLeft_toLeftOf="@id/tv_devicesConnectedFragment_message"/>


</android.support.constraint.ConstraintLayout>